[MS-1428] Add max-height to reviews card to prevent overflow

--- a/src/sass/prototype/review.scss
+++ b/src/sass/prototype/review.scss
@@ -79,6 +79,7 @@
     gap: 1.93rem;
     padding: 3.1rem;
     min-height: 25rem;
+    max-height: 30rem;
     height: 100%;
 
       time{
